--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@
 #
 
 # Specify the login credentials for the desired Salesforce organization
-sf.username = sujit@pwc.com
-sf.password = Ssf@29777anq47kIzzIDSAjTPK6zCC6F
+sf.username = "user@123.com"
+sf.password = "password with securitytoken"(password@123ERTDE456Yutybtdton)
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
